fix on always visible scroll in code listings

--- a/__scss/screen.css.scss
+++ b/__scss/screen.css.scss
@@ -1117,7 +1117,7 @@ html, body {
 		@extend %code-font;
 
 		max-height: 1000px;
-		overflow-y: scroll;
+		overflow-y: auto;
 	}
 
 	blockquote {
